# semiocore-v1

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  MANIFESTO.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/contract/: README.md  ast.v1.md  ctxscan.v1.md  lang.v1.md  plasticity.v1.md  trace.v1.md
expected/ast/: basic.ast.json
expected/lang/: basic.lang.json
expected/plasticity/: basic.plasticity.json
fixtures/biomed_v1/: circadian_disruption.fixture.json  frailty_phenotype.fixture.json  inflammation_proxy.fixture.json  metabolic_risk.fixture.json  qc_regime.fixture.json  (+1 more)
paper_figures/: make_cite_snippets.py  make_figures.py  make_tables.py  trace_utils.py
programs/: e2_border.sc  e3_jitter_seed.sc  e3_noise.sc
schemas/: ast.schema.json  ctxscan.schema.json  lang.schema.json  trace.schema.json
semioc/: cli.py  contract_ids.py  ctx.py  ctxscan.py  engine.py  model.py  parser.py  plasticity.py  replay.py  sc_parser.py  util.py  world.py
semiocore-v1.1.0/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFESTO.md  Makefile  README.md
tests/: test_biomed_contracts_golden.py  test_cli_contracts_validate_smoke.py  test_cli_parse_smoke.py  test_cli_plasticity_smoke.py  test_conformance_ctxscan_matches_expected.py  test_conformance_run_trace_matches_expected.py  test_contract_schemas_v1.py  test_parser_smoke.py  test_schemas_smoke.py  test_smoke.py  test_witness_audit.py
tools/: compare_json.py  compare_trace.py  paper_artifacts.py  paper_demo.py  paper_grade_artifacts.py  verify_witness.py
(+93 files in other folders)
